--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "nuxt-headlessui": "^1.1.5",
     "tailwind-scrollbar": "^3.1.0"
   }
 }
