--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-headlessui": "^1.1.5",
+    "nuxt-icon": "^0.6.9",
     "tailwind-scrollbar": "^3.1.0"
   }
 }
