--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.9",
     "tailwind-scrollbar": "^3.1.0"
