--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@morev/vue-transitions": "^3.0.2",
+    "chart.js": "^4.4.2",
     "nuxt": "^3.10.3",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
